Fix text overlap and wrapping.
Fix the 4a. text overlapping on a phone
and stop the No text from wrapping.

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -10,3 +10,9 @@ label {
   margin-left: 4px;
   margin-right: 8px;
 }
+
+.dataRow > .number {
+  padding-right: 0;
+  /* 15 left padding + 24px for the number */
+  width: 39px;
+}
